# QUARK

./: .gitattributes  .gitignore  .lfsconfig  .readthedocs.yaml  AUTHORS  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  NOTICE  Open Call QUARK.ics  README.md  TODO.md  cleanup.sh  config_predictor.yml  environment.yml  h origin HEAD  pyproject.toml  requirements_full.txt  setup.sh
.github/: CODEOWNERS
.github/workflows/: container_build_publish.yml  lint.yml  test.yml
application/quark/: .gitattributes  .gitignore  AUTHORS  CITATION.cff  Dockerfile  NOTICE  README.md
application/requirements/: prod.txt
docs/: README.md  analysis.rst  conf.py  developer.rst  index.rst  modules.rst  reference.rst  requirements.txt  tutorial.rst
literature/: 000_literature_template.md  abbas-Quantum Optimization Potential, Challenges, and the Path Forward.md  fitzgar-QUARK.md  huang-Near-Term Quantum Computing Techniques - Variational Quantum Algorithms, Error Mitigation, Circuit Compilation, Benchmarking and Classical Simulation.md  lubinski-Application-Oriented Performance Benchmarks for Quantum Computing.md  sankar-Benchmark Study of Quantum Algorithms for Combinatorial Optimization - Unitary versus Dissipative.md  wang-Benchmarking the Performance of a Quantum Computer.md
organizational/: Bench-QC_Optimization_Substream.pptx  project_plan.md
protocols/: 08-11-2023.md  11-09-2024.md  2023-05-02.md  2023-05-23.md  2023-06-27.md  2023-08-22.md  2023-09-19.md  2023-12-13.md  2024-01-18.md  2024-02-14.md  2024-02-28.md  2024-03-13.md  2024-03-26.md  2024-04.12.md  2024-05-15.md  2024-05-22.md  2024-06-05.md  2024-07-03.md  2024-07-17.md  2024-07-31.md  2024-07-31.md   2024-08-14.md  2024-08-28.md  2024-09-11.md  2024-10-16.md  2024-11-06.md  template.md
results/: README.md
src/: BenchmarkManager.py  BenchmarkRecord.py  ConfigManager.py  Installer.py  Metrics.py  Plotter.py  benchmark_manager.py  benchmark_record.py  config.py  config_manager.py  installer.py  main.py  plotter.py  resume.py  utils.py  utils_mpi.py
tests/: testMain.py  test_BenchmarkManager.py  test_ConfigManager.py  test_Main.py  test_benchmark_manager.py  test_config_manager.py  test_main_temp.py
(+1061 files in other folders)
