[build-system]
# Keep in sync with optional dev requirements
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# Copy of build-system requirements
dev = [
    "setuptools>=61.0",
]

[project.urls]
Homepage = "https://github.com/QUARK-framework/QUARK"
Issues = "https://github.com/QUARK-framework/QUARK/issues"

[project]
name = "quark-framework"
version = "0.1"
authors = [
  { name="Philipp Ross", email="philipp.ross@bmw.de" },
  { name="Marvin Erdmann", email="marvin.erdmann@bmw.de" },
  { name="Andre Luckow", email="andre.luckow@bmwgroup.com" },
  { name="Greshma Shaji", email="greshma.shaji@bmwgroup.com" },
  { name="Florian Kiwit", email="florian.kiwit@bmw.de" },
  { name="Benjamin Decker", email="benjamin.decker@bmw.de" }
]
description = "Framework for Quantum Computing Application Benchmarking"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "Apache-2.0"}
dependencies = [
    "amazon-braket-pennylane-plugin==1.30.2",
    "amazon-braket-sdk==1.88.2",
    "boto3==1.35.73",
    "botocore==1.35.73",
    "cma==4.0.0",
    "dimod==0.12.18",
    "dwave-networkx==0.8.15",
    "dwave-samplers==1.4.0",
    "inquirer==3.4.0",
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "matplotlib==3.9.3",
    "more-itertools==10.5.0",
    "networkx==3.4.2",
    "nnf==0.4.1",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pennylane==0.39.0",
    "pennylane-lightning==0.39.0",
    "pulp==2.9.0",
    "pulser==1.1.1",
    "python-sat==1.8.dev13",
    "pyyaml==6.0.2",
    "qiskit==1.3.0",
    "qiskit-aer==0.15.1",
    "qiskit-algorithms==0.3.1",
    "qiskit-ibm-runtime==0.33.2",
    "qiskit-optimization==0.6.1",
    "qrisp==0.5.2",
    "qubovert==1.2.5",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "tensorboard==2.18.0",
    "tensorboardx==2.6.2.2",
    "torch==2.5.1",
    "typing-extensions==4.12.2",
]